# ml_anomaly_detection

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
tests/: test_anomaly_detection.py
